# kprun

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.cursor/skills/prepare-release/: SKILL.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/kprun/: Cargo.toml
crates/kprun-core/: Cargo.toml
crates/kprun-core/src/: audit.rs  config.rs  dotenv.rs  error.rs  import.rs  inject.rs  lib.rs  parse.rs  secure_fs.rs  template.rs  test_fixtures.rs  test_support.rs  unlock.rs  vault.rs
crates/kprun/src/: cli.rs  main.rs  spawn.rs  ui.rs
crates/kprun/src/commands/: deinit.rs  delete.rs  doctor.rs  export.rs  get.rs  import.rs  init.rs  list.rs  mcp.rs  migrate.rs  mod.rs  reveal_master.rs  run.rs  scan.rs  set.rs  unset.rs
crates/kprun/src/commands/agents/: mod.rs  policy.rs  targets.rs
crates/kprun/src/mcp_bridge/: legacy_sse.rs  mod.rs  sse.rs  streamable.rs
crates/kprun/src/scan/: git.rs  mod.rs  patterns.rs  scanner.rs
docs/: TESTING.md  github-setup.md
docs/changelogs/: v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.2.0.md  v0.2.1.md  v0.2.2.md  v0.2.3.md  v0.2.4.md  v0.3.0.md  v0.3.1.md  v0.3.2.md  v0.4.0.md  v0.4.1.md  v0.4.2.md  v0.4.3.md  v0.5.0.md  v0.6.0.md  v0.6.1.md  v0.6.2.md  v0.7.0.md
docs/superpowers/plans/: 2026-06-22-kprun-mvp.md  2026-06-23-ci-release-repo-hygiene.md  2026-06-23-kprun-post-mvp-followups.md  2026-06-24-security-hardening-v0.2.0.md
docs/superpowers/specs/: 2026-06-22-kprun-design.md  2026-06-23-ci-release-repo-design.md  2026-06-23-kprun-post-mvp-followups-design.md
scripts/: install.ps1  install.sh
tests/: agents.rs  deinit_delete.rs  doctor.rs  export_import.rs  init.rs  init_quick.rs  init_set_run.rs  keepassxc_compat.rs  manage.rs  mcp_bridge.rs  mcp_stdio.rs  migrate.rs  reveal_master.rs  scan.rs  version.rs
tests/common/: mcp_mock.rs  mod.rs
