[package]
name = "kprun-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
keepass.workspace = true
keyring.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rpassword.workspace = true
chrono.workspace = true
zeroize.workspace = true
rand.workspace = true
tempfile.workspace = true

[dev-dependencies]
tempfile.workspace = true

[features]
default = []
test-hooks = []
