[package]
name = "kprun"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "kprun"
path = "src/main.rs"

[dependencies]
kprun-core = { path = "../kprun-core" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
which.workspace = true
rpassword.workspace = true
zeroize.workspace = true
ureq.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
kprun-core = { path = "../kprun-core" }

[[test]]
name = "version"
path = "../../tests/version.rs"

[[test]]
name = "init"
path = "../../tests/init.rs"

[[test]]
name = "init_set_run"
path = "../../tests/init_set_run.rs"
required-features = ["test-hooks"]

[[test]]
name = "mcp_stdio"
path = "../../tests/mcp_stdio.rs"
required-features = ["test-hooks"]

[[test]]
name = "mcp_bridge"
path = "../../tests/mcp_bridge.rs"
required-features = ["test-hooks"]

[[test]]
name = "manage"
path = "../../tests/manage.rs"
required-features = ["test-hooks"]

[[test]]
name = "export_import"
path = "../../tests/export_import.rs"
required-features = ["test-hooks"]

[[test]]
name = "doctor"
path = "../../tests/doctor.rs"
required-features = ["test-hooks"]

[[test]]
name = "keepassxc_compat"
path = "../../tests/keepassxc_compat.rs"
required-features = ["test-hooks"]

[features]
default = []
test-hooks = ["kprun-core/test-hooks"]
